Missing router apis + test QILIN-60 #time 1d 4h
